# alsa-policy-enforcement

./: Makefile  Makefile.am  README  alsaif.h  autogen.sh  configure.ac  control.h  dbusif.h  logging.c  logging.h
conf/fremantle/: nokia-n900.conf
conf/leste/: nokia-n900.conf
debian/: changelog  control  copyright  rules
man/: alsaped.8
src/: alsaif.c  alsaif.h  alsaped.c  config.c  config.h  control.c  control.h  dbusif.c  logging.c  options.h  test.c
