sbin_PROGRAMS = alsaped

dist_doc_DATA = README

alsaped_CFLAGS = $(DEPS_CFLAGS)
alsaped_LDADD  = $(DEPS_LIBS)

alsaped_SOURCES = src/alsaped.c \
		  src/alsaif.c \
		  src/alsaif.h \
		  src/config.c \
		  src/config.h \
		  src/control.c \
		  src/control.h \
		  src/dbusif.c \
		  src/dbusif.h \
		  src/logging.c \
		  src/logging.h \
		  src/options.h
